# pepper

./: AUTHORS  COPYING  Makefile.am  configure.ac
data/doctor/units/: display-manager.env
data/headless/units/: display-manager-ready.path  display-manager-ready.service  display-manager.env  display-manager.service  display-user.service  display_env.sh
data/scripts/: winfo
data/units/: display-manager.service  display-manager.service.headless
packaging/: pepper.spec
pkgconfig/: pepper-devicemgr.pc.in  pepper-evdev.pc.in  pepper-headless.pc.in  pepper-inotify.pc.in  pepper-keyrouter.pc.in  pepper-xkb.pc.in
src/: Makefile.am
src/headless_samples/: Makefile.am  input-backend.c  output-backend.c
src/lib/desktop-shell/: desktop-shell-internal.h  shell-client.c  shell-surface.c  shell.c
src/lib/devicemgr/: Makefile.am  devicemgr-internal.h  devicemgr.c  devicemgr.h  pepper-devicemgr.c  pepper-devicemgr.h
src/lib/drm/: drm-buffer.c  drm-common.c  drm-connector.c  drm-internal.h  drm-output.c  drm-plane.c
src/lib/evdev/: Makefile.am  evdev-internal.h  evdev.c  pepper-evdev.h
src/lib/fbdev/: fbdev-output.c
src/lib/headless/: Makefile.am  headless-client.c  headless-internal.h  pepper-headless-input.h  pepper-headless-output.h  pepper-headless.c  pepper-headless.h
src/lib/headless/protocol/: pepper-headless.xml  tizen-headless.xml
src/lib/inotify/: Makefile.am  pepper-inotify-internal.h  pepper-inotify.c  pepper-inotify.h
src/lib/keyrouter/: Makefile.am  keyrouter-internal.h  keyrouter.c  keyrouter.h  pepper-keyrouter-internal.h  pepper-keyrouter-wayland.c  pepper-keyrouter-wayland.h  pepper-keyrouter.c  pepper-keyrouter.h
src/lib/pepper/: Makefile.am  buffer.c  compositor.c  input.c  keyboard.c  misc.c  output.c  pepper-internal.h  pepper-output-backend.h  pepper-utils-pixman.h  pepper-utils-xkb.h  pepper-utils.h  pepper.h  plane.c  pointer.c  region.c  subsurface.c  surface.c  utils-file.c  utils-log.c  utils-region.c  utils-security.c  view.c
src/lib/render/: Makefile.am  gl-renderer.c  pepper-render-internal.h  pixman-renderer.c  renderer.c
src/lib/tdm/: tdm-common.c  tdm-internal.h  tdm-output.c
src/lib/wayland/: wayland-common.c  wayland-internal.h  wayland-output.c  wayland-shm-buffer.c
src/lib/x11/: x11-output.c
src/lib/xkb/: Makefile.am  pepper-xkb.h  xkb-internal.h  xkb.c
src/samples/: Makefile.am  fbdev-backend.c  headless-client.c  headless-input-backend.c  headless-output-backend.c  headless-server.c  headless_client.c  sample-client.c  sample-server.c
